samples/_failures_safe/1761224417_8efd3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fee5d3d2.c: In function ‘main’:
./samples/SAFE/__tmp_fee5d3d2.c:172:5: error: expected ‘,’ or ‘;’ at end of input
  172 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_fee5d3d2.c:172:5: error: expected declaration or statement at end of input
